# ollama2a

./: .gitignore  .pypirc  AGENTS.md  IMPROVEMENTS.md  MANIFEST.in  README.md  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.py
.github/workflows/: python-publish.yml
ollama2a/: __init__.py  agent_executor.py  ollama_manager.py
tests/: conftest.py  test_agent_executor.py  test_main.py  test_ollama_manager.py
