[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama2a"
dynamic = ["version"]
description = "A Python library for running Ollama agents with automated server management"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Thijs Hakkenberg", email = "thijs.hakkenberg@ecolab.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "pydantic-ai>=0.0.14",
    "ollama>=0.5.1,<1.0.0",
    "fasta2a>=0.3.5,<1.0.0",
    "psutil>=5.8.0,<8.0.0",
    "a2a-sdk",
    "openai>=1.0.0,<2.0.0",
    "httpx>=0.24.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=1.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/thijshakkenbergecolab/ollama2a"
Repository = "https://github.com/thijshakkenbergecolab/ollama2a"
Issues = "https://github.com/thijshakkenbergecolab/ollama2aissues"
Documentation = "https://github.com/thijshakkenbergecolab/ollama2a#readme"

[tool.setuptools.dynamic]
version = {attr = "ollama2a.__version__"}

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88